<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Connoisseur</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="home">Home</string>
    <string name="the">THE</string>
    <string name="connoisseur_phonetic">Con-nois-seur</string>
    <string name="facebook_app_id">810582959049392</string>

    <!-- Login -->
    <string name="login_email_prompt">Enter your email</string>
    <string name="login_username_prompt">Enter your username</string>
    <string name="signup_username_prompt">Pick a username</string>
    <string name="confirm_password_prompt">Confirm your password</string>
    <string name="login_password_prompt">Enter your password</string>
    <string name="signup_password_prompt">Think of a password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="invalid_email">Unfortunately, we don\'t think your email address is correct</string>
    <string name="not_unique_email">There already is a user using this email address</string>
    <string name="not_unique_username">Sorry, someone has already picked that username</string>
    <string name="not_existing_username">Sorry, no such username exists</string>
    <string name="wrong_password">That\'s the wrong password for this username</string>

    <!-- Main Menu Strings -->
    <string name="main_menu">MAIN MENU</string>
    <string name="connoisseur_collection">THE CONNOISSEUR\'S COLLECTION</string>
    <string name="connoisseur_collection_desc">See how you scored on previous sessions, which phrases you learnt and replay sessions to gain a better score</string>

    <!-- Language selection Strings -->
    <string name="language_selection_instruction">Choose your language of choice</string>
    <string name="language_selection">LANGUAGE SELECTION</string>
    <string name="play_session">PLAY GAME</string>
    <string name="language_selection_desc">Perfect the language of your choice in game mode, or go random and take whatever the Connoisseur throws at you</string>
    <string name="no_languages">Unfortunately no languages are currently available, please contact support</string>

    <!-- Collection -->
    <string name="collection_heading">THE CONNOISSEUR\'S COLLECTION</string>
    <string name="collection_subheading">View past sessions and the phrases you succeeded</string>
    <string name="view_comments">View\ncomments</string>
    <string name="close_comment">Close\ncomments</string>

    <!-- Exercise -->
    <string name="you_have_the_tongue">You have the tongue of a...</string>

    <!-- Tutorial screens text -->
    <string name="tutorial_screen_1">The phrase you are attempting</string>
    <string name="tutorial_screen_2">Hearts indicate the lives you have left</string>
    <string name="tutorial_screen_3">Press to hear the pronunciation</string>
    <string name="tutorial_screen_4">Press and hold to record yourself</string>

    <!-- Performance ranked low to high (1 worst, 3 best) -->
    <string name="performance_1">Barbarian</string>
    <string name="performance_2">Tourist</string>
    <string name="performance_3">Connoisseur</string>
    <string name="connoisseur_description">(Average number of attempts = 1)</string>
    <string name="tourist_description">(Average number of attempts between 1 and 2)</string>
    <string name="barbarian_description">(Average number of attempts greater than 2)</string>
    <string name="personal_highlights_text">YOUR PERSONAL HIGHLIGHTS\n Performance based on the accuracy of your annunciation</string>
    <string name="play_new_session">PLAY NEW SESSION</string>
    <string name="personal_best_worst">YOUR PERSONAL BEST / WORST</string>

    <!-- Placeholder values -->
    <string name="phonetic_spelling_test">ʛʠɠƙʄƈɗƭʃʒʂʐçʝɣχʁχħɦhⱱɽ</string>
    <string name="translation_test">Russian Doll</string>
    <string name="russia">Russian</string>
    <string name="progress_sample">1</string>
    <string name="word_sample">Ma-try-osh-ka</string>
    <string name="description_sample">The first Russian nested doll set was made in 1890 by Vasily Zvyozdochkin from a design by Sergey Malyutin, who was a folk crafts painter at Abramtsevo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_test">Download Image</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_language_selection">LanguageSelectionActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_session_summary">SessionSummary</string>
    <string name="title_activity_voice_recogniser_test">VoiceRecogniserTestActivity</string>
    <string name="title_activity_comment">CommentActivity</string>

    <!-- Comments strings -->
    <string name="comments_text">Comment your thoughts!</string>
    <string name="comment_hint_normal">Post a comment</string>
    <string name="comment_hint_reply">Post a reply</string>
    <string name="sample_comment">I really thing you need to put a stress on the end of the word to get the right intonation</string>

    <!-- Friend Search strings -->
    <string name="search_hint">Search for friends</string>
    <string name="title_activity_friend_search">FriendSearch</string>
    <string name="your_friends">Your friends</string>
    <string name="pending_friends">People who have added you</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

</resources>
