<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="@dimen/large_padding"
    android:background="@drawable/gradient_selector"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/face_connoisseur"
        android:padding="@dimen/large_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/normal_margin">

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/signup_username_prompt"
            android:gravity="center"
            android:layout_margin="@dimen/normal_margin"/>

        <ImageView
            android:id="@+id/feedback_username"
            android:visibility="invisible"
            android:layout_width="@dimen/feedback_length"
            android:layout_height="@dimen/feedback_length"
            android:src="@drawable/tick_correct"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/normal_margin">

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/signup_password_prompt"
            android:gravity="center"
            android:layout_margin="@dimen/normal_margin"/>

        <ImageView
            android:id="@+id/feedback_password"
            android:visibility="invisible"
            android:layout_width="@dimen/feedback_length"
            android:layout_height="@dimen/feedback_length"
            android:src="@drawable/tick_correct"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/normal_margin">

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/confirm_password_prompt"
            android:gravity="center"
            android:layout_margin="@dimen/normal_margin"/>

        <ImageView
            android:id="@+id/feedback_password_confirmation"
            android:visibility="invisible"
            android:layout_width="@dimen/feedback_length"
            android:layout_height="@dimen/feedback_length"
            android:src="@drawable/tick_correct"/>

    </LinearLayout>

    <Button
        android:id="@+id/enter_details"
        android:onClick="enterDetails"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium"
        android:text="@string/create_account"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/normal_padding"
        android:layout_gravity="center"
        android:layout_margin="@dimen/large_margin">

        <TextView
            android:id="@+id/skip"
            android:onClick="skipEnterDetails"
            android:clickable="true"
            android:padding="@dimen/normal_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:gravity="center"
            android:text="Skip"/>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <TextView
            android:padding="@dimen/normal_padding"
            android:id="@+id/login"
            android:onClick="loginToggle"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:gravity="center"
            android:text="Login"/>

        </LinearLayout>


</LinearLayout>