<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_padding"
    android:background="@drawable/gradient_selector">

    <ImageButton
        android:layout_width="@dimen/home_icon_width"
        android:layout_height="@dimen/home_icon_width"
        android:src="@drawable/ui_back"
        android:background="@android:color/transparent"
        android:onClick="goBack"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="-20dp"
        android:gravity="center|top">

        <RelativeLayout
            android:layout_width="@dimen/ring_diameter"
            android:layout_height="@dimen/ring_diameter">

            <ImageView
                android:id="@+id/language_image"
                android:layout_width="@dimen/language_width"
                android:layout_height="@dimen/language_height"
                android:src="@drawable/flag_random"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:layout_width="@dimen/ring_diameter"
                android:layout_height="@dimen/ring_diameter"
                android:src="@drawable/ring"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/language"
                android:text="@string/russia"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progess"
                android:text="@string/progress_sample"/>

            </LinearLayout>

        <ImageView
            android:id="@+id/word_illustration"
            android:layout_width="@dimen/illustration_width"
            android:layout_height="@dimen/illustration_height"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/matryoshka"/>

        <TextView
            android:id="@+id/word"
            android:layout_margin="@dimen/normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/word_sample"/>

        <TextView
            android:id="@+id/phonetic_spelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/phonetic_spelling_test"/>

        <LinearLayout
            android:id="@+id/lives_section_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hearts_height_small"
            android:visibility="invisible"
            android:padding="@dimen/small_padding">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/large_hearts"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/hearts_height"
            android:id="@+id/word_description_view"
            android:visibility="gone"
            android:layout_margin="@dimen/vsmall_margin">

            <TextView
                android:id="@+id/word_description"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hearts_height"
                android:gravity="center"
                android:text="@string/description_sample"/>

        </ScrollView>


        <LinearLayout
            android:id="@+id/lives_section"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hearts_height"
            android:layout_margin="@dimen/vsmall_margin"
            android:visibility="visible"
            android:gravity="center">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding"
                android:src="@drawable/large_hearts"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/score"
                    android:layout_width="@dimen/accuracy_diameter"
                    android:layout_height="@dimen/accuracy_diameter"
                    android:textSize="@dimen/text_vsmall"
                    android:layout_marginLeft="2dp"
                    android:textColor="@color/green"
                    android:gravity="center"
                    android:text="86%"/>

                <ImageView
                    android:layout_width="@dimen/accuracy_diameter"
                    android:layout_height="@dimen/accuracy_diameter"
                    android:src="@drawable/accuracy_positive"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_margin="@dimen/normal_margin"
                    android:id="@+id/listen_icon"
                    android:onClick="playRecording"
                    android:layout_width="@dimen/microphone_width"
                    android:layout_height="@dimen/microphone_width"
                    android:src="@drawable/ui_listen"/>

                <ImageView
                    android:id="@+id/record_icon"
                    android:visibility="visible"
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_width="@dimen/microphone_width"
                    android:layout_height="@dimen/microphone_width"
                    android:src="@drawable/ui_record"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/proceed"
                android:layout_width="@dimen/accuracy_diameter"
                android:layout_height="@dimen/accuracy_diameter"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/accuracy_negative"/>

            </RelativeLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/connoisseur_side"
            android:layout_width="30dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_2"/>


        </LinearLayout>


</LinearLayout>